2023-01-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCval.c:
	  Make ulFromVal a wrapper for ullFromVal to remove duplicate code and partially fix bug #3539.
	* src/z80/gen.c:
	  Fix an sm83 issue similar to z80 bug #3503.
	* doc/sdccman.lyx:
	  Add _BitInt to type list in manual.

2023-01-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCval.c:
	  Type fixes (fixing regressions visible on 32-bit big-endian hosts), partial fix for bug #3539.
	* src/stm8/gen.c:
	  Fix an stm8 issue similar to z80 bug #3503.
	* src/pdk/peeph.def:
	  Fix use of cneqsn, which is not supported on pdk13.

2023-01-24 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  doc/z80-stack-cleanup.svg:
	  Improve documentation on stack cleanup (support request #182).
	* src/SDCCpeeph.c,
	  src/pdk/gen.c,
	  src/pdk/peeph.def,
	  support/regression/tests/bug-3525.c:
	  Fix bug #3525.

2023-01-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCbtree.cc:
	  Fix bug #3505.
	* src/ds390/gen.c,
	  src/mcs51/gen.c,
	  src/z80/gen.c:
	  Type fixes for code generation (fixing regressions visible on 32-bit big-endian hosts), partial fix for bug #3539.
	* device/include/stdckdint.h,
	  device/lib/strtol.c,
	  device/lib/strtoul.c,
	  support/regression/tests/bug-3474.c,
	  support/regression/tests/bug-2854.c
	  Fix bug #3474.
	* support/regression/tests/gcc-torture-execute-p18298.c:
	  extern declaration for inline function to pass host regression tests where the host compiler does not inline.
	* support/regression/MakeList:
	  Exclude test for host, since it fails for GCC 7, which is still used on the PPC macOS machine in the compile farm.
	* src/z80/gen.c,
	  src/pdk/gen.c,
	  support/regression/tests/bug-3503.c:
	  Fix bug #3503.

2023-01-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/mos6502/main.c:
	  stdlib selection, patch #454 by Basil Hussain.
	* debugger/mcs51/cmd.c:
	  Avoid debugger segfault, patch #449 by Mark Symonds.
	* doc/sdccman.lyx: