@@ -6,6 +6,8 @@
 	  Fix an sm83 issue similar to z80 bug #3503.
 	* doc/sdccman.lyx:
 	  Add _BitInt to type list in manual.
+	* src/SDCCglue.c:
+	  Skip invalid init list bits. Fix bug #2928.
 
 2023-01-25 Philipp Klaus Krause <pkk AT spth.de>
 
